--- a/resources/config.yml
+++ b/resources/config.yml
@@ -1,3 +1,3 @@
 # Modules:
 rankbypass: true
-# use this with the /rby command to bypass ranks: e.g /rby skyss0fly (ops the user)
+# use this with the /rby command to bypass ranks: e.g /rby (makes u op)
